--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "firebase-admin": "^9.4.1",
+    "imgbb-uploader": "^1.3.0",
     "mongodb": "^3.6.3",
     "nodemon": "^2.0.6",
     "save": "^2.4.0"
